--- a/analysis-3.tex
+++ b/analysis-3.tex
@@ -447,4 +447,6 @@ We can use Euler's formula to write $e^{\alpha t}$ when $\alpha \in \C$:
     where $\tau_{\ell'} =\gamma_{\ell'} + i \theta _{\ell'}$, $\ell \in \{0, \dots, m_\ell-1\}$, $\ell' \in \{ 0,\dots, n_\ell -1 \}$.
 \end{theorem}
 
+% TODO: jordan normal form, matrix exponentials, classification of unstable points, probably more
+
 \end{document}
